[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/tile_set.tres" type="TileSet" id=2]
[ext_resource path="res://TestTilemap.gd" type="Script" id=3]
[ext_resource path="res://Zeus/Zeus.tscn" type="PackedScene" id=4]
[ext_resource path="res://Map.gd" type="Script" id=5]
[ext_resource path="res://Levels/Island/Game.gd" type="Script" id=6]
[ext_resource path="res://Bomb/Bomb.tscn" type="PackedScene" id=7]
[ext_resource path="res://Shared/Corner.tscn" type="PackedScene" id=8]
[ext_resource path="res://Shared/Smoke.tscn" type="PackedScene" id=9]

[node name="Game" type="Node2D"]
script = ExtResource( 6 )
Bomb = ExtResource( 7 )
Corner = ExtResource( 8 )
Smoke = ExtResource( 9 )
radius = 2.5

[node name="TileMaps" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Water" type="TileMap" parent="TileMaps"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
collision_layer = 8
collision_mask = 2
format = 1

[node name="Land" type="TileMap" parent="TileMaps"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
collision_mask = 2
format = 1
tile_data = PoolIntArray( -327680, 1, 1, -327679, 1, 1, -327678, 1, 1, -327677, 1, 1, -327676, 1, 1, -327675, 1, 1, -327674, 1, 0, -327673, 1, 1, -327672, 1, 1, -327671, 1, 0, -327670, 1, 1, -327669, 1, 1, -327668, 1, 1, -327667, 1, 1, -327666, 1, 1, -327665, 1, 1, -327664, 1, 1, -327663, 1, 1, -327662, 1, 1, -327661, 1, 0, -327660, 1, 0, -327659, 1, 1, -327658, 1, 1, -327657, 1, 1, -327656, 1, 1, -327655, 1, 1, -327654, 1, 1, -327653, 1, 1, -327652, 1, 1, -327651, 1, 1, -327650, 1, 1, -327649, 1, 1, -327648, 1, 1, -327647, 1, 1, -327646, 1, 1, -327645, 1, 1, -327644, 1, 1, -327643, 1, 1, -327642, 1, 1, -327641, 1, 1, -327640, 1, 1, -327639, 1, 1, -327638, 1, 1, -327637, 1, 1, -327636, 1, 1, -327635, 1, 0, -327634, 1, 1, -327633, 1, 1, -327632, 1, 1, -327631, 1, 1, -262144, 1, 1, -262095, 1, 1, -196608, 1, 1, -196559, 1, 1, -131072, 1, 1, -131023, 1, 1, -65536, 1, 0, -65487, 1, 0, 0, 1, 1, 49, 1, 1, 65536, 1, 1, 65556, 0, 0, 65557, 0, 1, 65558, 0, 1, 65559, 0, 1, 65560, 0, 1, 65561, 0, 1, 65562, 0, 2, 65585, 1, 1, 131072, 1, 1, 131088, 0, 0, 131089, 0, 1, 131090, 0, 1, 131091, 0, 1, 131092, 0, 131081, 131093, 0, 65537, 131094, 0, 65537, 131095, 0, 65537, 131096, 0, 65537, 131097, 0, 65537, 131098, 0, 131079, 131099, 0, 1, 131100, 0, 1, 131101, 0, 1, 131102, 0, 1, 131103, 0, 1, 131104, 0, 2, 131121, 1, 1, 196608, 1, 1, 196620, 0, 0, 196621, 0, 1, 196622, 0, 1, 196623, 0, 1, 196624, 0, 131081, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 65537, 196628, 0, 65537, 196629, 0, 262144, 196630, 0, 65537, 196631, 0, 65537, 196632, 0, 65537, 196633, 0, 65537, 196634, 0, 65537, 196635, 0, 65537, 196636, 0, 65537, 196637, 0, 65537, 196638, 0, 65537, 196639, 0, 65537, 196640, 0, 131079, 196641, 0, 1, 196642, 0, 1, 196643, 0, 1, 196644, 0, 2, 196657, 1, 1, 262144, 1, 1, 262155, 0, 0, 262156, 0, 131081, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 65537, 262169, 0, 65537, 262170, 0, 262145, 262171, 0, 65537, 262172, 0, 65537, 262173, 0, 65537, 262174, 0, 65537, 262175, 0, 65537, 262176, 0, 65537, 262177, 0, 65537, 262178, 0, 65537, 262179, 0, 65537, 262180, 0, 65538, 262193, 1, 0, 327680, 1, 1, 327691, 0, 65536, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 262145, 327699, 0, 65537, 327700, 0, 65537, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65537, 327710, 0, 65537, 327711, 0, 262145, 327712, 0, 65537, 327713, 0, 65537, 327714, 0, 65537, 327715, 0, 65537, 327716, 0, 131079, 327717, 0, 2, 327729, 1, 1, 393216, 1, 1, 393226, 0, 0, 393227, 0, 131081, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65537, 393242, 0, 65537, 393243, 0, 65537, 393244, 0, 65537, 393245, 0, 65537, 393246, 0, 65537, 393247, 0, 65537, 393248, 0, 65537, 393249, 0, 65537, 393250, 0, 65537, 393251, 0, 65537, 393252, 0, 65537, 393253, 0, 131079, 393254, 0, 2, 393265, 1, 1, 458752, 1, 1, 458762, 0, 65536, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 65537, 458775, 0, 65537, 458776, 0, 65537, 458777, 0, 65537, 458778, 0, 65537, 458779, 0, 65537, 458780, 0, 65537, 458781, 0, 65537, 458782, 0, 65537, 458783, 0, 65537, 458784, 0, 65537, 458785, 0, 65537, 458786, 0, 262144, 458787, 0, 65537, 458788, 0, 65537, 458789, 0, 65537, 458790, 0, 65538, 458801, 1, 1, 524288, 1, 1, 524298, 0, 65536, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65537, 524307, 0, 65537, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65537, 524311, 0, 65537, 524312, 0, 65537, 524313, 0, 65537, 524314, 0, 65537, 524315, 0, 65537, 524316, 0, 65537, 524317, 0, 65537, 524318, 0, 262144, 524319, 0, 65537, 524320, 0, 65537, 524321, 0, 65537, 524322, 0, 65537, 524323, 0, 65537, 524324, 0, 65537, 524325, 0, 65537, 524326, 0, 65538, 524337, 1, 1, 589824, 1, 1, 589834, 0, 65536, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 589842, 0, 262145, 589843, 0, 65537, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65537, 589847, 0, 65537, 589848, 0, 65537, 589849, 0, 65537, 589850, 0, 65537, 589851, 0, 65537, 589852, 0, 65537, 589853, 0, 65537, 589854, 0, 65537, 589855, 0, 65537, 589856, 0, 65537, 589857, 0, 65537, 589858, 0, 65537, 589859, 0, 65537, 589860, 0, 65537, 589861, 0, 65537, 589862, 0, 131079, 589863, 0, 2, 589873, 1, 1, 655360, 1, 1, 655370, 0, 65536, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65537, 655384, 0, 65537, 655385, 0, 65537, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65537, 655390, 0, 65537, 655391, 0, 65537, 655392, 0, 65537, 655393, 0, 65537, 655394, 0, 262145, 655395, 0, 65537, 655396, 0, 65537, 655397, 0, 65537, 655398, 0, 65537, 655399, 0, 65538, 655409, 1, 1, 720896, 1, 1, 720906, 0, 65536, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 262144, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65537, 720925, 0, 65537, 720926, 0, 65537, 720927, 0, 65537, 720928, 0, 65537, 720929, 0, 65537, 720930, 0, 65537, 720931, 0, 65537, 720932, 0, 262145, 720933, 0, 65537, 720934, 0, 65537, 720935, 0, 65538, 720945, 1, 1, 786432, 1, 1, 786442, 0, 65536, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 262145, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 0, 262145, 786454, 0, 65537, 786455, 0, 65537, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65537, 786462, 0, 65537, 786463, 0, 65537, 786464, 0, 65537, 786465, 0, 65537, 786466, 0, 65537, 786467, 0, 65537, 786468, 0, 65537, 786469, 0, 65537, 786470, 0, 65537, 786471, 0, 131079, 786472, 0, 2, 786481, 1, 0, 851968, 1, 1, 851978, 0, 65536, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 262145, 851985, 0, 65537, 851986, 0, 65537, 851987, 0, 65537, 851988, 0, 65537, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65537, 851992, 0, 65537, 851993, 0, 262144, 851994, 0, 65537, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65537, 851998, 0, 65537, 851999, 0, 65537, 852000, 0, 65537, 852001, 0, 65537, 852002, 0, 65537, 852003, 0, 65537, 852004, 0, 65537, 852005, 0, 65537, 852006, 0, 65537, 852007, 0, 65537, 852008, 0, 65538, 852017, 1, 1, 917504, 1, 1, 917514, 0, 65536, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 262145, 917523, 0, 65537, 917524, 0, 65537, 917525, 0, 65537, 917526, 0, 65537, 917527, 0, 65537, 917528, 0, 65537, 917529, 0, 65537, 917530, 0, 65537, 917531, 0, 262145, 917532, 0, 65537, 917533, 0, 65537, 917534, 0, 65537, 917535, 0, 65537, 917536, 0, 65537, 917537, 0, 262144, 917538, 0, 262145, 917539, 0, 65537, 917540, 0, 65537, 917541, 0, 65537, 917542, 0, 65537, 917543, 0, 65537, 917544, 0, 65538, 917553, 1, 1, 983040, 1, 1, 983050, 0, 65536, 983051, 0, 65537, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 262145, 983055, 0, 65537, 983056, 0, 65537, 983057, 0, 65537, 983058, 0, 65537, 983059, 0, 65537, 983060, 0, 65537, 983061, 0, 262145, 983062, 0, 65537, 983063, 0, 65537, 983064, 0, 65537, 983065, 0, 65537, 983066, 0, 65537, 983067, 0, 65537, 983068, 0, 65537, 983069, 0, 262145, 983070, 0, 65537, 983071, 0, 65537, 983072, 0, 262144, 983073, 0, 65537, 983074, 0, 65537, 983075, 0, 65537, 983076, 0, 65537, 983077, 0, 65537, 983078, 0, 65537, 983079, 0, 65537, 983080, 0, 65538, 983089, 1, 1, 1048576, 1, 0, 1048586, 0, 65536, 1048587, 0, 65537, 1048588, 0, 262144, 1048589, 0, 65537, 1048590, 0, 65537, 1048591, 0, 65537, 1048592, 0, 65537, 1048593, 0, 262144, 1048594, 0, 65537, 1048595, 0, 65537, 1048596, 0, 65537, 1048597, 0, 65537, 1048598, 0, 65537, 1048599, 0, 65537, 1048600, 0, 65537, 1048601, 0, 65537, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537, 1048606, 0, 65537, 1048607, 0, 65537, 1048608, 0, 65537, 1048609, 0, 65537, 1048610, 0, 65537, 1048611, 0, 65537, 1048612, 0, 65537, 1048613, 0, 65537, 1048614, 0, 65537, 1048615, 0, 65537, 1048616, 0, 65538, 1048625, 1, 1, 1114112, 1, 1, 1114122, 0, 65536, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 262144, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65537, 1114135, 0, 65537, 1114136, 0, 65537, 1114137, 0, 65537, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65537, 1114148, 0, 65537, 1114149, 0, 65537, 1114150, 0, 65537, 1114151, 0, 65537, 1114152, 0, 65538, 1114161, 1, 1, 1179648, 1, 1, 1179658, 0, 131072, 1179659, 0, 9, 1179660, 0, 65537, 1179661, 0, 65537, 1179662, 0, 65537, 1179663, 0, 65537, 1179664, 0, 65537, 1179665, 0, 65537, 1179666, 0, 65537, 1179667, 0, 65537, 1179668, 0, 65537, 1179669, 0, 65537, 1179670, 0, 65537, 1179671, 0, 65537, 1179672, 0, 65537, 1179673, 0, 65537, 1179674, 0, 65537, 1179675, 0, 262144, 1179676, 0, 65537, 1179677, 0, 65537, 1179678, 0, 65537, 1179679, 0, 65537, 1179680, 0, 65537, 1179681, 0, 65537, 1179682, 0, 65537, 1179683, 0, 65537, 1179684, 0, 65537, 1179685, 0, 65537, 1179686, 0, 65537, 1179687, 0, 65537, 1179688, 0, 65538, 1179697, 1, 1, 1245184, 1, 1, 1245195, 0, 65536, 1245196, 0, 65537, 1245197, 0, 65537, 1245198, 0, 65537, 1245199, 0, 65537, 1245200, 0, 65537, 1245201, 0, 65537, 1245202, 0, 65537, 1245203, 0, 65537, 1245204, 0, 65537, 1245205, 0, 65537, 1245206, 0, 65537, 1245207, 0, 65537, 1245208, 0, 65537, 1245209, 0, 65537, 1245210, 0, 65537, 1245211, 0, 65537, 1245212, 0, 65537, 1245213, 0, 65537, 1245214, 0, 65537, 1245215, 0, 65537, 1245216, 0, 65537, 1245217, 0, 65537, 1245218, 0, 65537, 1245219, 0, 65537, 1245220, 0, 65537, 1245221, 0, 262144, 1245222, 0, 65537, 1245223, 0, 7, 1245224, 0, 131074, 1245233, 1, 1, 1310720, 1, 1, 1310731, 0, 131072, 1310732, 0, 9, 1310733, 0, 65537, 1310734, 0, 65537, 1310735, 0, 65537, 1310736, 0, 65537, 1310737, 0, 65537, 1310738, 0, 65537, 1310739, 0, 65537, 1310740, 0, 65537, 1310741, 0, 65537, 1310742, 0, 65537, 1310743, 0, 65537, 1310744, 0, 65537, 1310745, 0, 65537, 1310746, 0, 65537, 1310747, 0, 65537, 1310748, 0, 65537, 1310749, 0, 65537, 1310750, 0, 65537, 1310751, 0, 65537, 1310752, 0, 65537, 1310753, 0, 65537, 1310754, 0, 65537, 1310755, 0, 65537, 1310756, 0, 65537, 1310757, 0, 65537, 1310758, 0, 7, 1310759, 0, 131074, 1310769, 1, 1, 1376256, 1, 1, 1376268, 0, 65536, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 0, 65537, 1376272, 0, 65537, 1376273, 0, 262144, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 262144, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65537, 1376290, 0, 65537, 1376291, 0, 65537, 1376292, 0, 65537, 1376293, 0, 65537, 1376294, 0, 65538, 1376305, 1, 1, 1441792, 1, 1, 1441804, 0, 65536, 1441805, 0, 65537, 1441806, 0, 65537, 1441807, 0, 65537, 1441808, 0, 65537, 1441809, 0, 65537, 1441810, 0, 65537, 1441811, 0, 65537, 1441812, 0, 65537, 1441813, 0, 65537, 1441814, 0, 65537, 1441815, 0, 65537, 1441816, 0, 65537, 1441817, 0, 65537, 1441818, 0, 65537, 1441819, 0, 65537, 1441820, 0, 65537, 1441821, 0, 65537, 1441822, 0, 65537, 1441823, 0, 65537, 1441824, 0, 65537, 1441825, 0, 65537, 1441826, 0, 65537, 1441827, 0, 65537, 1441828, 0, 7, 1441829, 0, 131073, 1441830, 0, 131074, 1441841, 1, 1, 1507328, 1, 1, 1507340, 0, 131072, 1507341, 0, 9, 1507342, 0, 65537, 1507343, 0, 65537, 1507344, 0, 262144, 1507345, 0, 65537, 1507346, 0, 65537, 1507347, 0, 65537, 1507348, 0, 65537, 1507349, 0, 65537, 1507350, 0, 65537, 1507351, 0, 65537, 1507352, 0, 65537, 1507353, 0, 65537, 1507354, 0, 65537, 1507355, 0, 65537, 1507356, 0, 65537, 1507357, 0, 65537, 1507358, 0, 65537, 1507359, 0, 65537, 1507360, 0, 65537, 1507361, 0, 65537, 1507362, 0, 65537, 1507363, 0, 7, 1507364, 0, 131074, 1507377, 1, 1, 1572864, 1, 1, 1572877, 0, 131072, 1572878, 0, 131073, 1572879, 0, 131073, 1572880, 0, 9, 1572881, 0, 65537, 1572882, 0, 65537, 1572883, 0, 65537, 1572884, 0, 262145, 1572885, 0, 65537, 1572886, 0, 65537, 1572887, 0, 65537, 1572888, 0, 65537, 1572889, 0, 65537, 1572890, 0, 262145, 1572891, 0, 65537, 1572892, 0, 65537, 1572893, 0, 65537, 1572894, 0, 65537, 1572895, 0, 65537, 1572896, 0, 7, 1572897, 0, 131073, 1572898, 0, 131073, 1572899, 0, 131074, 1572913, 1, 1, 1638400, 1, 1, 1638416, 0, 131072, 1638417, 0, 131073, 1638418, 0, 131073, 1638419, 0, 131073, 1638420, 0, 131073, 1638421, 0, 131073, 1638422, 0, 131073, 1638423, 0, 131073, 1638424, 0, 131073, 1638425, 0, 131073, 1638426, 0, 131073, 1638427, 0, 131073, 1638428, 0, 131073, 1638429, 0, 131073, 1638430, 0, 131073, 1638431, 0, 131073, 1638432, 0, 131074, 1638449, 1, 1, 1703936, 1, 1, 1703985, 1, 1, 1769472, 1, 1, 1769521, 1, 1, 1835008, 1, 1, 1835057, 1, 0, 1900544, 1, 1, 1900593, 1, 1, 1966080, 1, 1, 1966129, 1, 1, 2031616, 1, 1, 2031617, 1, 1, 2031618, 1, 1, 2031619, 1, 0, 2031620, 1, 0, 2031621, 1, 1, 2031622, 1, 1, 2031623, 1, 1, 2031624, 1, 1, 2031625, 1, 1, 2031626, 1, 1, 2031627, 1, 1, 2031628, 1, 1, 2031629, 1, 1, 2031630, 1, 0, 2031631, 1, 1, 2031632, 1, 1, 2031633, 1, 1, 2031634, 1, 1, 2031635, 1, 0, 2031636, 1, 1, 2031637, 1, 1, 2031638, 1, 1, 2031639, 1, 1, 2031640, 1, 1, 2031641, 1, 1, 2031642, 1, 1, 2031643, 1, 1, 2031644, 1, 1, 2031645, 1, 1, 2031646, 1, 1, 2031647, 1, 1, 2031648, 1, 1, 2031649, 1, 1, 2031650, 1, 1, 2031651, 1, 1, 2031652, 1, 1, 2031653, 1, 1, 2031654, 1, 1, 2031655, 1, 1, 2031656, 1, 1, 2031657, 1, 1, 2031658, 1, 1, 2031659, 1, 1, 2031660, 1, 1, 2031661, 1, 1, 2031662, 1, 1, 2031663, 1, 1, 2031664, 1, 1, 2031665, 1, 1 )
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 91 )
collision_mask = 9

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="BombTimer" type="Timer" parent="."]
autostart = true

[node name="Zeus" parent="." instance=ExtResource( 4 )]
position = Vector2( 101, 59 )

[connection signal="bomb_thrown" from="Player" to="." method="_on_KinematicBody2D_bomb_thrown"]
[connection signal="dashed" from="Player" to="." method="_on_Player_dashed"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="land_build" from="Player" to="." method="_on_Player_land_build"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]
